--- a/index.html
+++ b/index.html
@@ -5,9 +5,8 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="./vendor/normalize.css">
-    <link rel="stylesheet" href="/vendor/fonts/fonts.css">
-    <link rel="stylesheet" href="/styles/style.css" />
+    <link rel="stylesheet" href="./pages/style.css">
+  
     <title>Around The U.S.</title>
 </head>
 
@@ -27,7 +26,7 @@
                             <img src="./images/Vector.png" alt="edit button" />
                         </button>
                     </div>
-                    <p class="profile__explorer">Explorer</p>
+                    <p class="profile__job">Explorer</p>
                 </div>
                 <button class="profile__add-btn">
                     <img src="./images/add btn.png" alt="add btn">
@@ -36,17 +35,17 @@
             </div>
 
             <section class="elements">
-                <div class="elment">
+                <div class="element">
                     <img src="/images/kirill-pershin-1088404-unsplash 1.png" alt="Yosemite Valley"
-                        class="elment__image">
+                        class="element__image">
                     <div class="element__description">
                         <p class="element__title">Yosemite Valley</p>
                         <a href="#">
                             <img class="element__like-btn" src="/images/like-btn.svg" alt="like button"></a>
                     </div>
                 </div>
-                <div class="elment">
-                    <img src="./images/kirill-pershin-1404681-unsplash.png" alt="Lake Louise" class="elment__image">
+                <div class="element">
+                    <img src="./images/kirill-pershin-1404681-unsplash.png" alt="Lake Louise" class="element__image">
                     <div class="element__description">
                         <p class="element__title">Lake Louise</p>
                         <a href="#">
@@ -54,33 +53,33 @@
                     </div>
                 </div>
 
-                <div class="elment">
-                    <img src="./images/kirill-pershin-1556355-unsplash.png" alt="Bald Mountains" class="elment__image">
+                <div class="element">
+                    <img src="./images/kirill-pershin-1556355-unsplash.png" alt="Bald Mountains" class="element__image">
                     <div class="element__description">
                         <p class="element__title">Bald Mountains</p>
                         <a href="#">
                             <img class="element__like-btn" src="/images/like-btn.svg" alt="like button"></a>
                     </div>
                 </div>
-                <div class="elment">
-                    <img src="./images/kirill-pershin-1404681-.png" alt="Latemar" class="elment__image">
+                <div class="element">
+                    <img src="./images/kirill-pershin-1404681-.png" alt="Latemar" class="element__image">
                     <div class="element__description">
                         <p class="element__title">Latemar</p>
                         <a href="#">
                             <img class="element__like-btn" src="/images/like-btn.svg" alt="like button"></a>
                     </div>
                 </div>
-                <div class="elment">
+                <div class="element">
                     <img src="./images/kirill-pershin-1556355-unsplash 5.png" alt="Vanoise National"
-                        class="elment__image">
+                        class="element__image">
                     <div class="element__description">
                         <p class="element__title">Vanoise Nationa...</p>
                         <a href="#">
                             <img class="element__like-btn" src="/images/like-btn.svg" alt="like button"></a>
                     </div>
                 </div>
-                <div class="elment">
-                    <img src="./images/kirill-pershin-1088404-unsplash6.png" alt="Lago di Braies" class="elment__image">
+                <div class="element">
+                    <img src="./images/kirill-pershin-1088404-unsplash6.png" alt="Lago di Braies" class="element__image">
                     <div class="element__description">
                         <p class="element__title">Lago di Braies</p>
                         <a href="#">
@@ -95,18 +94,24 @@
         <div class="wrapper">
             <div class="wrapper__container">
                 <button type="button" aria-label="Close button" class="wrapper__close-btn"> </button>
-                <h2 class="form__title">Edit Profile </h2>
+
                 <form class="Form" action="/">
-                    <input class="form__text-input form__text-input_name" type="text" name="name" placeholder="Name"
-                        id="name">
-                    <input class="form__text-input form__text-input_job" type="text" name="job" placeholder="Job"
-                        id="job">
-                    <button type="submit" class="form__submit-btn">Save</button>
+                    <fieldset class="form__fieldset">
+                        <legend>
+                            <h2 class="form__title">Edit Profile </h2>
+                        </legend>
+                        <input class="form__text-input form__text-input_name" type="text" name="name" placeholder="Name"
+                            id="name">
+                        <input class="form__text-input form__text-input_job" type="text" name="job" placeholder="Job"
+                            id="job">
+                        <button type="submit" class="form__submit-btn">Save</button>
+                    </fieldset>
                 </form>
 
 
             </div>
         </div>
+        <script src="scripts.js"></script>
 </body>
 
 </html>
