--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 
             <section class="elements">
                 <div class="element">
-                    <img src="/images/kirill-pershin-1088404-unsplash 1.png" alt="Yosemite Valley"
+                    <img src="./images/kirill-pershin-.png" alt="Yosemite Valley"
                         class="element__image">
                     <div class="element__description">
                         <p class="element__title">Yosemite Valley</p>
