--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                     <div class="element__description">
                         <p class="element__title">Yosemite Valley</p>
                         <a href="#">
-                            <img class="element__like-btn" src="/images/like-btn.svg" alt="like button"></a>
+                            <img class="element__like-btn" src="./images/like-btn.svg" alt="like button"></a>
                     </div>
                 </div>
                 <div class="element">
@@ -47,7 +47,7 @@
                     <div class="element__description">
                         <p class="element__title">Lake Louise</p>
                         <a href="#">
-                            <img class="element__like-btn" src="/images/like-btn.svg" alt="like button"></a>
+                            <img class="element__like-btn" src="../web_project_4/images/like-btn.svg" alt="like button"></a>
                     </div>
                 </div>
 
@@ -56,7 +56,7 @@
                     <div class="element__description">
                         <p class="element__title">Bald Mountains</p>
                         <a href="#">
-                            <img class="element__like-btn" src="/images/like-btn.svg" alt="like button"></a>
+                            <img class="element__like-btn" src="./images/like-btn.svg" alt="like button"></a>
                     </div>
                 </div>
                 <div class="element">
@@ -64,7 +64,7 @@
                     <div class="element__description">
                         <p class="element__title">Latemar</p>
                         <a href="#">
-                            <img class="element__like-btn" src="/images/like-btn.svg" alt="like button"></a>
+                            <img class="element__like-btn" src="./images/like-btn.svg" alt="like button"></a>
                     </div>
                 </div>
                 <div class="element">
@@ -73,7 +73,7 @@
                     <div class="element__description">
                         <p class="element__title">Vanoise Nationa...</p>
                         <a href="#">
-                            <img class="element__like-btn" src="/images/like-btn.svg" alt="like button"></a>
+                            <img class="element__like-btn" src="./images/like-btn.svg" alt="like button"></a>
                     </div>
                 </div>
                 <div class="element">
@@ -81,7 +81,7 @@
                     <div class="element__description">
                         <p class="element__title">Lago di Braies</p>
                         <a href="#">
-                            <img class="element__like-btn" src="/images/like-btn.svg" alt="like button"></a>
+                            <img class="element__like-btn" src="./images/like-btn.svg" alt="like button"></a>
                     </div>
                 </div>
             </section>
