--- a/index.html
+++ b/index.html
@@ -34,12 +34,12 @@
 
             <section class="elements">
                 <div class="element">
-                    <img src="./images/kirill-pershin-.png" alt="Yosemite Valley"
+                    <img src="./images/picture-num-1.png" alt="Yosemite Valley"
                         class="element__image">
                     <div class="element__description">
                         <p class="element__title">Yosemite Valley</p>
                         <a href="#">
-                            <img class="element__like-btn" src="./images/like-btn.svg" alt="like button"></a>
+                            <img class="element__like-btn" src="./images/like-button.png" alt="like button"></a>
                     </div>
                 </div>
                 <div class="element">
@@ -47,7 +47,7 @@
                     <div class="element__description">
                         <p class="element__title">Lake Louise</p>
                         <a href="#">
-                            <img class="element__like-btn" src="../web_project_4/images/like-btn.svg" alt="like button"></a>
+                            <img class="element__like-btn" src="./images/like-button.png" alt="like button"></a>
                     </div>
                 </div>
 
@@ -56,7 +56,7 @@
                     <div class="element__description">
                         <p class="element__title">Bald Mountains</p>
                         <a href="#">
-                            <img class="element__like-btn" src="./images/like-btn.svg" alt="like button"></a>
+                            <img class="element__like-btn" src="./images/like-button.png" alt="like button"></a>
                     </div>
                 </div>
                 <div class="element">
@@ -64,7 +64,7 @@
                     <div class="element__description">
                         <p class="element__title">Latemar</p>
                         <a href="#">
-                            <img class="element__like-btn" src="./images/like-btn.svg" alt="like button"></a>
+                            <img class="element__like-btn" src="./images/like-button.png" alt="like button"></a>
                     </div>
                 </div>
                 <div class="element">
@@ -73,15 +73,15 @@
                     <div class="element__description">
                         <p class="element__title">Vanoise Nationa...</p>
                         <a href="#">
-                            <img class="element__like-btn" src="./images/like-btn.svg" alt="like button"></a>
+                            <img class="element__like-btn" src="./images/like-button.png" alt="like button"></a>
                     </div>
                 </div>
                 <div class="element">
-                    <img src="./images/kirill-pershin-1088404-unsplash6.png" alt="Lago di Braies" class="element__image">
+                    <img src="./images/pcture-num-6.png" alt="Lago di Braies" class="element__image">
                     <div class="element__description">
                         <p class="element__title">Lago di Braies</p>
                         <a href="#">
-                            <img class="element__like-btn" src="./images/like-btn.svg" alt="like button"></a>
+                            <img class="element__like-btn" src="./images/like-button.png" alt="like button"></a>
                     </div>
                 </div>
             </section>
