--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                     <div class="element__description">
                         <p class="element__title">Yosemite Valley</p>
                         <a href="#">
-                            <img class="element__like-btn" src="./images/like-button.png" alt="like button"></a>
+                            <img class="element__like-btn" src="./blocks/element/__like-btn/like-button.png" alt="like button"></a>
                     </div>
                 </div>
                 <div class="element">
