--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                     <div class="element__description">
                         <p class="element__title">Lake Louise</p>
                         <a href="#">
-                            <img class="element__like-btn" src="./images/like-button.png" alt="like button"></a>
+                            <img class="element__like-btn" src="./blocks/element/__like-btn/like-button.png" alt="like button"></a>
                     </div>
                 </div>
 
@@ -56,7 +56,7 @@
                     <div class="element__description">
                         <p class="element__title">Bald Mountains</p>
                         <a href="#">
-                            <img class="element__like-btn" src="./images/like-button.png" alt="like button"></a>
+                            <img class="element__like-btn" src="./blocks/element/__like-btn/like-button.png" alt="like button"></a>
                     </div>
                 </div>
                 <div class="element">
@@ -64,7 +64,7 @@
                     <div class="element__description">
                         <p class="element__title">Latemar</p>
                         <a href="#">
-                            <img class="element__like-btn" src="./images/like-button.png" alt="like button"></a>
+                            <img class="element__like-btn" src="./blocks/element/__like-btn/like-button.png" alt="like button"></a>
                     </div>
                 </div>
                 <div class="element">
@@ -73,7 +73,7 @@
                     <div class="element__description">
                         <p class="element__title">Vanoise Nationa...</p>
                         <a href="#">
-                            <img class="element__like-btn" src="./images/like-button.png" alt="like button"></a>
+                            <img class="element__like-btn" src="./blocks/element/__like-btn/like-button.png" alt="like button"></a>
                     </div>
                 </div>
                 <div class="element">
@@ -81,7 +81,7 @@
                     <div class="element__description">
                         <p class="element__title">Lago di Braies</p>
                         <a href="#">
-                            <img class="element__like-btn" src="./images/like-button.png" alt="like button"></a>
+                            <img class="element__like-btn" src="./blocks/element/__like-btn/like-button.png" alt="like button"></a>
                     </div>
                 </div>
             </section>
@@ -89,6 +89,7 @@
         <footer class="footer">
             <p class="footer__copyright">© 2021 Around The U.S.</p>
         </footer>
+        <!-------
         <div class="wrapper">
             <div class="wrapper__container">
                 <button type="button" aria-label="Close button" class="wrapper__close-btn"> </button>
@@ -110,6 +111,7 @@
             </div>
         </div>
         <script src="scripts.js"></script>
+        -->
 </body>
 
 </html>
