--- a/index.html
+++ b/index.html
@@ -4,111 +4,98 @@
         <meta charset="UTF-8" />
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <link rel="stylesheet" href="./pages/style.css"/>
-    <title>Around The U.S.</title>
-</head>
+        <link rel="stylesheet" href="./pages/style.css" />
+        <title>Around The U.S.</title>
+    </head>
 
-<body class="page">
-    <div class="page__container">
-        <header class="header">
-            <img class="header__logo" src="./images/Vector.svg" alt="header-logo" />
-        </header>
+    <body class="page">
+        <div class="page__container">
+            <header class="header">
+                <img class="header__logo" src="./images/Vector.svg" alt="header-logo" />
+            </header>
 
-        <main>
-            <div class="profile">
-                <img class="profile__avatar" src="./images/image.png" alt="profile picture" />
-                <div class="profile__info">
-                    <div class="profile__info-top">
-                        <h1 class="profile__title"> Jacques Cousteau</h1>
-                        <button class="profile__edit-btn">
-                            <img src="./images/Vector.png" alt="edit button" />
-                        </button>
+            <main>
+                <div class="profile">
+                    <img class="profile__avatar" src="./images/image.png" alt="profile picture" />
+                    <div class="profile__info">
+                        <div class="profile__info-top">
+                            <h1 class="profile__title">Jacques Cousteau</h1>
+                            <button class="profile__edit-btn">
+                                <img src="./images/Vector.png" alt="edit button" />
+                            </button>
+                        </div>
+                        <p class="profile__job">Explorer</p>
                     </div>
-                    <p class="profile__job">Explorer</p>
+                    <button class="profile__add-btn">
+                        <img src="./images/add btn.png" alt="add btn" />
+                    </button>
                 </div>
-                <button class="profile__add-btn">
-                    <img src="./images/add btn.png" alt="add btn">
 
-                </button>
+                <section class="elements">
+                    <div class="element">
+                        <img src="./images/picture-num-1.png" alt="Yosemite Valley" class="element__image" />
+                        <div class="element__description">
+                            <p class="element__title">Yosemite Valley</p>
+                            <a href="#"> <img class="element__like-btn" src="./blocks/element/__like-btn/like-button.png" alt="like button" /></a>
+                        </div>
+                    </div>
+                    <div class="element">
+                        <img src="./images/kirill-pershin-1404681-unsplash.png" alt="Lake Louise" class="element__image" />
+                        <div class="element__description">
+                            <p class="element__title">Lake Louise</p>
+                            <a href="#"> <img class="element__like-btn" src="./blocks/element/__like-btn/like-button.png" alt="like button" /></a>
+                        </div>
+                    </div>
+
+                    <div class="element">
+                        <img src="./images/kirill-pershin-1556355-unsplash.png" alt="Bald Mountains" class="element__image" />
+                        <div class="element__description">
+                            <p class="element__title">Bald Mountains</p>
+                            <a href="#"> <img class="element__like-btn" src="./blocks/element/__like-btn/like-button.png" alt="like button" /></a>
+                        </div>
+                    </div>
+                    <div class="element">
+                        <img src="./images/kirill-pershin-1404681-.png" alt="Latemar" class="element__image" />
+                        <div class="element__description">
+                            <p class="element__title">Latemar</p>
+                            <a href="#"> <img class="element__like-btn" src="./blocks/element/__like-btn/like-button.png" alt="like button" /></a>
+                        </div>
+                    </div>
+                    <div class="element">
+                        <img src="./images/kirill-pershin-1556355-unsplash 5.png" alt="Vanoise National" class="element__image" />
+                        <div class="element__description">
+                            <p class="element__title">Vanoise Nationa...</p>
+                            <a href="#"> <img class="element__like-btn" src="./blocks/element/__like-btn/like-button.png" alt="like button" /></a>
+                        </div>
+                    </div>
+                    <div class="element">
+                        <img src="./images/pcture-num-6.png" alt="Lago di Braies" class="element__image" />
+                        <div class="element__description">
+                            <p class="element__title">Lago di Braies</p>
+                            <a href="#"> <img class="element__like-btn" src="./blocks/element/__like-btn/like-button.png" alt="like button" /></a>
+                        </div>
+                    </div>
+                </section>
+            </main>
+            <footer class="footer">
+                <p class="footer__copyright">© 2021 Around The U.S.</p>
+            </footer>
+            <div class="modal modal_opened">
+                <div class="modal__container">
+                    <button type="button" class="modal__close-btn">
+                        <img src="./images/Close-Icon.png" alt="" />
+                    </button>
+                    <form class="form" action="/">
+                        <fieldset class="form__fieldset">
+                            <h2 class="form__title">Edit Profile</h2>
+                            <input type="text" name="name" class="form__text-input form__text-input_name" id="name" />
+                            <input type="text" name="job" class="form__text-input form__text-input_job" id="job" />
+                            <button type="submit" class="form__submit-btn">Save</button>
+                        </fieldset>
+                    </form>
+                </div>
             </div>
-
-            <section class="elements">
-                <div class="element">
-                    <img src="./images/picture-num-1.png" alt="Yosemite Valley"
-                        class="element__image">
-                    <div class="element__description">
-                        <p class="element__title">Yosemite Valley</p>
-                        <a href="#">
-                            <img class="element__like-btn" src="./blocks/element/__like-btn/like-button.png" alt="like button"></a>
-                    </div>
-                </div>
-                <div class="element">
-                    <img src="./images/kirill-pershin-1404681-unsplash.png" alt="Lake Louise" class="element__image">
-                    <div class="element__description">
-                        <p class="element__title">Lake Louise</p>
-                        <a href="#">
-                            <img class="element__like-btn" src="./blocks/element/__like-btn/like-button.png" alt="like button"></a>
-                    </div>
-                </div>
-
-                <div class="element">
-                    <img src="./images/kirill-pershin-1556355-unsplash.png" alt="Bald Mountains" class="element__image">
-                    <div class="element__description">
-                        <p class="element__title">Bald Mountains</p>
-                        <a href="#">
-                            <img class="element__like-btn" src="./blocks/element/__like-btn/like-button.png" alt="like button"></a>
-                    </div>
-                </div>
-                <div class="element">
-                    <img src="./images/kirill-pershin-1404681-.png" alt="Latemar" class="element__image">
-                    <div class="element__description">
-                        <p class="element__title">Latemar</p>
-                        <a href="#">
-                            <img class="element__like-btn" src="./blocks/element/__like-btn/like-button.png" alt="like button"></a>
-                    </div>
-                </div>
-                <div class="element">
-                    <img src="./images/kirill-pershin-1556355-unsplash 5.png" alt="Vanoise National"
-                        class="element__image">
-                    <div class="element__description">
-                        <p class="element__title">Vanoise Nationa...</p>
-                        <a href="#">
-                            <img class="element__like-btn" src="./blocks/element/__like-btn/like-button.png" alt="like button"></a>
-                    </div>
-                </div>
-                <div class="element">
-                    <img src="./images/pcture-num-6.png" alt="Lago di Braies" class="element__image">
-                    <div class="element__description">
-                        <p class="element__title">Lago di Braies</p>
-                        <a href="#">
-                            <img class="element__like-btn" src="./blocks/element/__like-btn/like-button.png" alt="like button"></a>
-                    </div>
-                </div>
-            </section>
-        </main>
-        <footer class="footer">
-            <p class="footer__copyright">© 2021 Around The U.S.</p>
-        </footer>
-        <div class="modal modal__opened">
-            <div class="modal__container">
-                <button type="button"  class="modal__close-btn"> 
-                    <img src="./images/Close-Icon.png" alt="">
-                </button>
-                <form class="form" action="/">
-                    <fieldset class="form__fieldset">
-                            <h2 class="form__title">Edit Profile </h2>
-                        <input type="text" name="name" class="form__text-input form__text-input_name" 
-                            id="name">
-                        <input type="text" name="job" class="form__text-input form__text-input_job" 
-                            id="job">
-                        <button type="submit" class="form__submit-btn">Save</button>
-                    </fieldset>
-                </form>
-
-
-            </div>
+            <script src="./scripts.js"></script>
         </div>
-        <script src="./scripts.js"></script>
-</body>
-
+    </body>
 </html>
