--- a/index.html
+++ b/index.html
@@ -36,14 +36,14 @@
                         <img src="./images/picture-num-1.png" alt="Yosemite Valley" class="element__image" />
                         <div class="element__description">
                             <p class="element__title">Yosemite Valley</p>
-                            <a href="#"> <img class="element__like-btn" src="./blocks/element/__like-btn/like-button.png" alt="like button" target="_blank" /></a>
+                            <a href="#" target="_blank" > <img class="element__like-btn" src="./blocks/element/__like-btn/like-button.png" alt="like button" /></a>
                         </div>
                     </div>
                     <div class="element">
                         <img src="./images/kirill-pershin-1404681-unsplash.png" alt="Lake Louise" class="element__image" />
                         <div class="element__description">
                             <p class="element__title">Lake Louise</p>
-                            <a href="#"> <img class="element__like-btn" src="./blocks/element/__like-btn/like-button.png" alt="like button" target="_blank"/></a>
+                            <a href="#" target="_blank" > <img class="element__like-btn" src="./blocks/element/__like-btn/like-button.png" alt="like button"/></a>
                         </div>
                     </div>
 
@@ -51,28 +51,28 @@
                         <img src="./images/kirill-pershin-1556355-unsplash.png" alt="Bald Mountains" class="element__image" />
                         <div class="element__description">
                             <p class="element__title">Bald Mountains</p>
-                            <a href="#"> <img class="element__like-btn" src="./blocks/element/__like-btn/like-button.png" alt="like button" target="_blank" /></a>
+                            <a href="#" target="_blank" > <img class="element__like-btn" src="./blocks/element/__like-btn/like-button.png" alt="like button"/></a>
                         </div>
                     </div>
                     <div class="element">
                         <img src="./images/kirill-pershin-1404681-.png" alt="Latemar" class="element__image" />
                         <div class="element__description">
                             <p class="element__title">Latemar</p>
-                            <a href="#"> <img class="element__like-btn" src="./blocks/element/__like-btn/like-button.png" alt="like button" target="_blank" /></a>
+                            <a href="#" target="_blank" > <img class="element__like-btn" src="./blocks/element/__like-btn/like-button.png" alt="like button"/></a>
                         </div>
                     </div>
                     <div class="element">
                         <img src="./images/kirill-pershin-1556355-unsplash 5.png" alt="Vanoise National" class="element__image" />
                         <div class="element__description">
                             <p class="element__title">Vanoise Nationa...</p>
-                            <a href="#"> <img class="element__like-btn" src="./blocks/element/__like-btn/like-button.png" alt="like button" target="_blank" /></a>
+                            <a href="#" target="_blank" > <img class="element__like-btn" src="./blocks/element/__like-btn/like-button.png" alt="like button"/></a>
                         </div>
                     </div>
                     <div class="element">
                         <img src="./images/pcture-num-6.png" alt="Lago di Braies" class="element__image" />
                         <div class="element__description">
                             <p class="element__title">Lago di Braies</p>
-                            <a href="#"> <img class="element__like-btn" src="./blocks/element/__like-btn/like-button.png" alt="like button" target="_blank" /></a>
+                            <a href="#" target="_blank" > <img class="element__like-btn" src="./blocks/element/__like-btn/like-button.png" alt="like button"/></a>
                         </div>
                     </div>
                 </section>
