--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                             <button type="button" class="element__like-btn"><img src="./images/like-btn.svg" alt="like button" id="like1" /></button>
                         </div>
                     </div>
-                    <div class="element">a
+                    <div class="element">
                         <img src="./images/kirill-pershin-1404681-unsplash.png" alt="Lake Louise" class="element__image" />
                         <div class="element__description">
                             <h3 class="element__title">Lake Louise</h3>
