--- a/index.html
+++ b/index.html
@@ -20,55 +20,55 @@
                     <div class="profile__info">
                         <div class="profile__info-top">
                             <h1 class="profile__title">Jacques Cousteau</h1>
-                            <button class="profile__edit-btn" aria-label="edit button" name="edit button"></button>
+                            <button class="profile__edit-btn" aria-label="edit button" name="edit button" type="button"></button>
                         </div>
                         <p class="profile__job">Explorer</p>
                     </div>
-                    <button class="profile__add-btn" aria-label="add button" name="add button"></button>
+                    <button class="profile__add-btn" aria-label="add button" name="add button" type="button"></button>
                 </div>
 
                 <section class="elements">
                     <div class="element">
                         <img src="./images/picture-num-1.png" alt="Yosemite Valley" class="element__image" />
                         <div class="element__description">
-                            <h3 class="element__title">Yosemite Valley</h3>
-                            <button type="button" class="element__like-btn"><img src="./images/like-btn.svg" alt="like button" id="like1" /></button>
+                            <h2 class="element__title">Yosemite Valley</h2>
+                            <button type="button" class="element__like-btn"><img src="./images/like-btn.svg" alt="like button" /></button>
                         </div>
                     </div>
                     <div class="element">
                         <img src="./images/kirill-pershin-1404681-unsplash.png" alt="Lake Louise" class="element__image" />
                         <div class="element__description">
-                            <h3 class="element__title">Lake Louise</h3>
-                            <button type="button" class="element__like-btn"><img src="./images/like-btn.svg" alt="like button" id="like2" /></button>
+                            <h2 class="element__title">Lake Louise</h2>
+                            <button type="button" class="element__like-btn"><img src="./images/like-btn.svg" alt="like button"  /></button>
                         </div>
                     </div>
 
                     <div class="element">
                         <img src="./images/kirill-pershin-1556355-unsplash.png" alt="Bald Mountains" class="element__image" />
                         <div class="element__description">
-                            <h3 class="element__title">Bald Mountains</h3>
-                            <button type="button" class="element__like-btn"><img src="./images/like-btn.svg" alt="like button" id="like3" /></button>
+                            <h2 class="element__title">Bald Mountains</h2>
+                            <button type="button" class="element__like-btn"><img src="./images/like-btn.svg" alt="like button"  /></button>
                         </div>
                     </div>
                     <div class="element">
                         <img src="./images/kirill-pershin-1404681-.png" alt="Latemar" class="element__image" />
                         <div class="element__description">
-                            <h3 class="element__title">Latemar</h3>
-                            <button type="button" class="element__like-btn"><img src="./images/like-btn.svg" alt="like button" id="like4" /></button>
+                            <h2 class="element__title">Latemar</h2>
+                            <button type="button" class="element__like-btn"><img src="./images/like-btn.svg" alt="like button" /></button>
                         </div>
                     </div>
                     <div class="element">
                         <img src="./images/kirill-pershin-1556355-unsplash-5.png" alt="Vanoise National" class="element__image" />
                         <div class="element__description">
-                            <h3 class="element__title">Vanoise National</h3>
-                            <button type="button" class="element__like-btn"><img src="./images/like-btn.svg" alt="like button" id="like5" /></button>
+                            <h2 class="element__title">Vanoise National</h2>
+                            <button type="button" class="element__like-btn"><img src="./images/like-btn.svg" alt="like button" /></button>
                         </div>
                     </div>
                     <div class="element">
                         <img src="./images/pcture-num-6.png" alt="Lago di Braies" class="element__image" />
                         <div class="element__description">
-                            <h3 class="element__title">Lago di Braies</h3>
-                            <button type="button" class="element__like-btn"><img src="./images/like-btn.svg" alt="like button" id="like6" /></button>
+                            <h2 class="element__title">Lago di Braies</h2>
+                            <button type="button" class="element__like-btn"><img src="./images/like-btn.svg" alt="like button" /></button>
                         </div>
                     </div>
                 </section>
