--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
                         <fieldset class="form__fieldset">
                             <h2 class="form__title">New place</h2>
                             <input type="text" name="name-element" class="form__text-input form__text-input_type_name-element" id="name-element" placeholder="Title" />
-                            <input type="url" name="img-element" class="form__text-input form__text-input_type_img-element id=" id="img-element" placeholder="Image Url" />
+                            <input type="url" name="img-element" class="form__text-input form__text-input_type_img-element" id="img-element" placeholder="Image Url" />
                             <button type="submit" name="submit button" class="form__submit-btn">Create</button>
                         </fieldset>
                     </form>
@@ -66,7 +66,7 @@
                 <div class="elements">
                     <div class="element">
                         <button type="button" class="element__delete" name="delete buttom"><img src="./images/Trash.png" alt="delete"></button>
-                        <img class="element__image element__image_btn" />
+                        <img class="element__image"/>
                         <div class="element__description">
                             <h2 class="element__title"></h2>
                             <button type="button" class="element__like-btn" aria-label="like-buttom"><img src="./images/like-btn.svg" alt="like-btn"></button>
@@ -75,8 +75,8 @@
                 </div>
             </template>
             <div class="modal modal_type_pop-up modal_closed">
-                <div class="modal__container">
-                    <button type="button" class="modal__close-btn" aria-label="close button" name="close button"></button>
+                <div class="modal__container modal__container_pop-up">
+                    <button type="button" class="modal__close_type_popup" aria-label="close button popup" name="popup close button"></button>
                     <img class="pop-up__img" />
                     <h2 class="pop-up__title"></h2>
                 </div>
