--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
                 </div>
             </template>
             <div class="modal modal_type_pop-up modal_closed">
-                <div class="modal__container modal__container_pop-up">
+                <div class="modal__container_type_popup">
                     <button type="button" class="modal__close_type_popup" aria-label="close button popup" name="popup close button"></button>
                     <img class="pop-up__img" />
                     <h2 class="pop-up__title"></h2>
