--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
             <div class="modal modal_type_add-element modal_closed">
                 <div class="modal__container">
                     <button type="button" class="modal__close-btn" aria-label="close button" name="close button"></button>
-                    <form class="form-element" action="/" name="form__add-element">
+                    <form class="form form-element" action="/" name="form__add-element">
                         <fieldset class="form__fieldset">
                             <h2 class="form__title">New place</h2>
                             <input type="text" name="name-element" class="form__text-input form__text-input_type_name-element" id="name-element" placeholder="Title" />
