--- a/index.html
+++ b/index.html
@@ -75,10 +75,10 @@
                 </div>
             </template>
             <div class="modal modal_type_pop-up modal_closed">
-                <div class="modal__container_type_popup">
+                <div class="modal__container modal__container_type_popup">
                     <button type="button" class="modal__close_type_popup" aria-label="close button popup" name="popup close button"></button>
-                    <img class="pop-up__img" />
-                    <h2 class="pop-up__title"></h2>
+                    <img class="modal__pop-up_img" />
+                    <h2 class="modal__pop-up_title"></h2>
                 </div>
             </div>
             <script type="module" src="./scripts/scripts.js"></script>
